<resources>
    <string name="app_name">OnboardSystem</string>
    <string name="tilt">Tilt:</string>
    <string name="acceleration">Acceleration:</string>
    <string name="battery">Battery:</string>
    <string name="message">Message:</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="z">Z:</string>
    <string name="connect_device">Connect Device</string>
    <string name="none">None</string>
    <string name="package_current">Package current:</string>
    <string name="package_voltage">Package voltage:</string>
    <string name="soc">SoC:</string>
    <string name="temperature">Temperature:</string>
</resources>